Point at the released 25.104.0 parent and BOM, drop stale local version pins, and consolidate the milestone changelog
Folds milestones M1-M8 into a single dated entry and records four changes that were
never written down: the failsafe argLine needed for ByteBuddy and reflective access
under Java 25, the coveralls jakarta.xml.bind-api 2.3.2 pin, the removal of the local
Java 17 compiler overrides now inherited from the parent, and the removal of
liquibase.hub.mode (M4) which made the Kubernetes pre-install Liquibase job time out.

Also drops two local property pins that shadowed the centralised values:
plugins.maven.failsafe.version (3.1.2, now 3.5.6 from maven-parent-pom) and
jakarta.xml.bind-api.raml.version (2.3.2, now from maven-framework-parent-pom, which
centralised it in M4 so children could drop their copies). Full reactor green on the
inherited versions: 68 unit tests and 18 integration tests, 0 failures.